critical/traefik/traefik/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.services.gelinas.cloud`)
      priority: 10
      services:
        - kind: TraefikService
          name: api@internal
  tls:
    certResolver: letsencrypt
    domains:
      - main: "*.services.gelinas.cloud"
